WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38521
New FileSystemPOSIX functions cause linker errors on Android
https://bugs.webkit.org/show_bug.cgi?id=38521
Summary
New FileSystemPOSIX functions cause linker errors on Android
Steve Block
Reported
2010-05-04 08:20:48 PDT
Android uses FileSystemPOSIX.cpp but also uses additional functions in FileSystemAndroid.cpp.
http://trac.webkit.org/changeset/57182
added a number of new functions to FileSystemPOSIX.cpp, of which two (closeFile and writeToFile) are already present in FileSystemAndroid.cpp. This causes link errors on Android due to multiply defined symbols.
Attachments
Patch
(1.96 KB, patch)
2010-05-04 08:45 PDT
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-05-04 08:45:47 PDT
Created
attachment 55022
[details]
Patch
WebKit Commit Bot
Comment 2
2010-05-04 14:02:53 PDT
Comment on
attachment 55022
[details]
Patch Clearing flags on attachment: 55022 Committed
r58774
: <
http://trac.webkit.org/changeset/58774
>
WebKit Commit Bot
Comment 3
2010-05-04 14:02:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug