2010-05-04  Steve Block  <steveblock@google.com>

Reviewed by Darin Adler.

        New FileSystemPOSIX functions cause linker errors on Android
        https://bugs.webkit.org/show_bug.cgi?id=38521

        No new tests, build fix only.

        * platform/android/FileSystemAndroid.cpp: Remove closeFile, which is provided in FileSystemPOSIX.cpp
        * platform/posix/FileSystemPOSIX.cpp: Guard writeToFile with !PLATFORM(ANDROID)

Canonical link: https://commits.webkit.org/50029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58774 268f45cc-cd09-0410-ab3c-d52691b4dbfc